--- a/gptel-0.9.8/README.org
+++ b/gptel-0.9.8/README.org
@@ -1,6 +1,6 @@
 #+title: gptel: A simple LLM client for Emacs
 
-[[https://elpa.nongnu.org/nongnu/gptel.svg][file:https://elpa.nongnu.org/nongnu/gptel.svg]] [[https://stable.melpa.org/packages/gptel-badge.svg][file:https://stable.melpa.org/packages/gptel-badge.svg]] [[https://melpa.org/#/gptel][file:https://melpa.org/packages/gptel-badge.svg]]
+[[https://elpa.nongnu.org/nongnu/gptel.html][file:https://elpa.nongnu.org/nongnu/gptel.svg]] [[https://stable.melpa.org/#/gptel][file:https://stable.melpa.org/packages/gptel-badge.svg]] [[https://melpa.org/#/gptel][file:https://melpa.org/packages/gptel-badge.svg]]
 
 gptel is a simple Large Language Model chat client for Emacs, with support for multiple models and backends.  It works in the spirit of Emacs, available at any time and uniformly in any buffer.
 
@@ -42,26 +42,43 @@ https://user-images.githubusercontent.com/8607532/230516816-ae4a613a-4d01-4073-a
 https://github.com/user-attachments/assets/cec11aec-52f6-412e-9e7a-9358e8b9b1bf
 #+html: </p>
 
-*Media support*
+*Tool use* (experimental)
 
 #+html: <p align="center">
-https://github.com/user-attachments/assets/1fd947e1-226b-4be2-bc68-7b22b2e3215f
+https://github.com/user-attachments/assets/5f993659-4cfd-49fa-b5cd-19c55766b9b2
 #+html: </p>
 
-*Multi-LLM support demo*:
+#+html: <p align="center">
+https://github.com/user-attachments/assets/8f57c20b-e1b0-4d86-b972-f46fb90ae1e7
+#+html: </p>
 
-https://github-production-user-asset-6210df.s3.amazonaws.com/8607532/278854024-ae1336c4-5b87-41f2-83e9-e415349d6a43.mp4
+See also [[https://youtu.be/g1VMGhC5gRU][this youtube demo (2 minutes)]] by Armin Darvish.
 
-- It's async and fast, streams responses.
-- Interact with LLMs from anywhere in Emacs (any buffer, shell, minibuffer, wherever)
+# *Media support*
+
+# #+html: <p align="center">
+# https://github.com/user-attachments/assets/1fd947e1-226b-4be2-bc68-7b22b2e3215f
+# #+html: </p>
+
+# *Multi-LLM support demo*:
+
+# https://github-production-user-asset-6210df.s3.amazonaws.com/8607532/278854024-ae1336c4-5b87-41f2-83e9-e415349d6a43.mp4
+
+------
+
+- gptel is async and fast, streams responses.
+- Interact with LLMs from anywhere in Emacs (any buffer, shell, minibuffer, wherever).
 - LLM responses are in Markdown or Org markup.
 - Supports multiple independent conversations and one-off ad hoc interactions.
-- Supports multi-modal models (include images, documents)
+- Supports tool-use to equip LLMs with agentic capabilities (experimental feature).
+- Supports multi-modal input (include images, documents).
 - Save chats as regular Markdown/Org/Text files and resume them later.
-- You can go back and edit your previous prompts or LLM responses when continuing a conversation. These will be fed back to the model.
+- Edit your previous prompts or LLM responses when continuing a conversation. These will be fed back to the model.
+- Supports introspection, so you can see /exactly/ what will be sent.  Inspect and modify queries before sending them.
+- Pause multi-stage requests at an intermediate stage and resume them later.
 - Don't like gptel's workflow? Use it to create your own for any supported model/backend with a [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][simple API]].
 
-gptel uses Curl if available, but falls back to url-retrieve to work without external dependencies.
+gptel uses Curl if available, but falls back to the built-in url-retrieve to work without external dependencies.
 
 ** Contents :toc:
   - [[#breaking-changes][Breaking changes!]]
@@ -98,17 +115,25 @@ gptel uses Curl if available, but falls back to url-retrieve to work without ext
       - [[#save-and-restore-your-chat-sessions][Save and restore your chat sessions]]
     - [[#setting-options-backend-model-request-parameters-system-prompts-and-more][Setting options (backend, model, request parameters, system prompts and more)]]
     - [[#include-more-context-with-requests][Include more context with requests]]
+    - [[#handle-reasoning-content][Handle "reasoning" content]]
+    - [[#tool-use-experimental][Tool use (experimental)]]
+      - [[#defining-gptel-tools][Defining gptel tools]]
+      - [[#selecting-tools][Selecting tools]]
     - [[#rewrite-refactor-or-fill-in-a-region][Rewrite, refactor or fill in a region]]
     - [[#extra-org-mode-conveniences][Extra Org mode conveniences]]
   - [[#faq][FAQ]]
-      - [[#i-want-to-use-gptel-in-a-way-thats-not-supported-by-gptel-send-or-the-options-menu][I want to use gptel in a way that's not supported by =gptel-send= or the options menu]]
+    - [[#chat-buffer-ui][Chat buffer UI]]
       - [[#i-want-the-window-to-scroll-automatically-as-the-response-is-inserted][I want the window to scroll automatically as the response is inserted]]
       - [[#i-want-the-cursor-to-move-to-the-next-prompt-after-the-response-is-inserted][I want the cursor to move to the next prompt after the response is inserted]]
       - [[#i-want-to-change-the-formatting-of-the-prompt-and-llm-response][I want to change the formatting of the prompt and LLM response]]
-      - [[#i-want-the-transient-menu-options-to-be-saved-so-i-only-need-to-set-them-once][I want the transient menu options to be saved so I only need to set them once]]
-      - [[#can-i-change-the-transient-menu-key-bindings][Can I change the transient menu key bindings?]]
       - [[#how-does-gptel-distinguish-between-user-prompts-and-llm-responses][How does gptel distinguish between user prompts and LLM responses?]]
+    - [[#transient-menu-behavior][Transient menu behavior]]
+      - [[#i-want-the-transient-menu-options-to-be-saved-so-i-only-need-to-set-them-once][I want the transient menu options to be saved so I only need to set them once]]
+      - [[#using-the-transient-menu-leaves-behind-extra-windows][Using the transient menu leaves behind extra windows]]
+      - [[#can-i-change-the-transient-menu-key-bindings][Can I change the transient menu key bindings?]]
       - [[#doom-emacs-sending-a-query-from-the-gptel-menu-fails-because-of-a-key-conflict-with-org-mode][(Doom Emacs) Sending a query from the gptel menu fails because of a key conflict with Org mode]]
+    - [[#miscellaneous][Miscellaneous]]
+      - [[#i-want-to-use-gptel-in-a-way-thats-not-supported-by-gptel-send-or-the-options-menu][I want to use gptel in a way that's not supported by =gptel-send= or the options menu]]
       - [[#chatgpt-i-get-the-error-http2-429-you-exceeded-your-current-quota][(ChatGPT) I get the error "(HTTP/2 429) You exceeded your current quota"]]
       - [[#why-another-llm-client][Why another LLM client?]]
   - [[#additional-configuration][Additional Configuration]]
@@ -134,15 +159,11 @@ If you want the stable version instead, add NonGNU-devel ELPA or MELPA-stable to
 #+begin_src emacs-lisp
   (straight-use-package 'gptel)
 #+end_src
-
-Installing the =markdown-mode= package is optional.
 #+html: </details>
 #+html: <details><summary>
 **** Manual
 #+html: </summary>
 Clone or download this repository and run =M-x package-install-file⏎= on the repository directory.
-
-Installing the =markdown-mode= package is optional.
 #+html: </details>
 #+html: <details><summary>
 **** Doom Emacs
@@ -450,17 +471,9 @@ The above code makes the backend available to select.  If you want it to be the 
 
 Register a backend with
 #+begin_src emacs-lisp
-;; Perplexity offers an OpenAI compatible API
-(gptel-make-openai "Perplexity"         ;Any name you want
-  :host "api.perplexity.ai"
+(gptel-make-perplexity "Perplexity"     ;Any name you want
   :key "your-api-key"                   ;can be a function that returns the key
-  :endpoint "/chat/completions"
-  :stream t
-  :models '(;; has many more, check perplexity.ai
-            pplx-7b-chat
-            pplx-70b-chat
-            pplx-7b-online
-            pplx-70b-online))
+  :stream t)                            ;If you want responses to be streamed
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
@@ -471,18 +484,9 @@ The above code makes the backend available to select.  If you want it to be the 
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
 (setq
- gptel-model   'pplx-7b-chat
- gptel-backend
- (gptel-make-openai "Perplexity"
-   :host "api.perplexity.ai"
-   :key "your-api-key"
-   :endpoint "/chat/completions"
-   :stream t
-   :models '(;; has many more, check perplexity.ai
-             pplx-7b-chat
-             pplx-70b-chat
-             pplx-7b-online
-             pplx-70b-online)))
+ gptel-model   'sonar
+ gptel-backend (gptel-make-perplexity "Perplexity"
+                 :key "your-api-key" :stream t))
 #+end_src
 
 #+html: </details>
@@ -509,6 +513,29 @@ The above code makes the backend available to select.  If you want it to be the 
  gptel-backend (gptel-make-anthropic "Claude"
                  :stream t :key "your-api-key"))
 #+end_src
+
+***** (Optional) Interim support for Claude 3.7 Sonnet
+
+gptel does not yet support specifying LLM "reasoning"/"thinking" behaviors dynamically through its interface.  This effort is ongoing, but in the meantime you use the Claude 3.7 Sonnet model in its "thinking" mode by defining a second Claude backend and selecting it in via the UI or elisp:
+
+#+begin_src emacs-lisp
+(gptel-make-anthropic "Claude-thinking" ;Any name you want
+  :key "your-API-key"
+  :stream t
+  :models '(claude-3-7-sonnet-20250219)
+  :header (lambda () (when-let* ((key (gptel--get-api-key)))
+                  `(("x-api-key" . ,key)
+                    ("anthropic-version" . "2023-06-01")
+                    ("anthropic-beta" . "pdfs-2024-09-25")
+                    ("anthropic-beta" . "output-128k-2025-02-19")
+                    ("anthropic-beta" . "prompt-caching-2024-07-31"))))
+  :request-params '(:thinking (:type "enabled" :budget_tokens 2048)
+                    :max_tokens 4096))
+#+end_src
+
+You can set the reasoning budget tokens and max tokens for this usage via the =:budget_tokens= and =:max_tokens= keys here, respectively.
+
+Once proper support for specifying reasoning behaviors is added to gptel's UI this will be unnecessary.
 
 #+html: </details>
 #+html: <details><summary>
@@ -642,14 +669,9 @@ The above code makes the backend available to select.  If you want it to be the 
 
 Register a backend with
 #+begin_src emacs-lisp
-;; DeepSeek offers an OpenAI compatible API
-(gptel-make-openai "DeepSeek"       ;Any name you want
-  :host "api.deepseek.com"
-  :endpoint "/chat/completions"
-  :stream t
-  :key "your-api-key"               ;can be a function that returns the key
-  :models '(deepseek-chat deepseek-coder))
-
+(gptel-make-deepseek "DeepSeek"       ;Any name you want
+  :stream t                           ;for streaming responses
+  :key "your-api-key")               ;can be a function that returns the key
 #+end_src
 
 You can pick this backend from the menu when using gptel (see [[#usage][Usage]]).
@@ -659,15 +681,10 @@ You can pick this backend from the menu when using gptel (see [[#usage][Usage]])
 The above code makes the backend available to select.  If you want it to be the default backend for gptel, you can set this as the value of =gptel-backend=.  Use this instead of the above.
 #+begin_src emacs-lisp
 ;; OPTIONAL configuration
-(setq gptel-model   'deepseek-chat
-      gptel-backend
-      (gptel-make-openai "DeepSeek"     ;Any name you want
-        :host "api.deepseek.com"
-        :endpoint "/chat/completions"
-        :stream t
-        :key "your-api-key"             ;can be a function that returns the key
-        :models '(deepseek-chat deepseek-coder)))
-
+(setq gptel-model   'deepseek-reasoner
+      gptel-backend (gptel-make-deepseek "DeepSeek"
+                      :stream t
+                      :key "your-api-key"))
 #+end_src
 
 #+html: </details>
@@ -715,11 +732,13 @@ Register a backend with
   ;; Github Models offers an OpenAI compatible API
   (gptel-make-openai "Github Models" ;Any name you want
     :host "models.inference.ai.azure.com"
-    :endpoint "/chat/completions"
+    :endpoint "/chat/completions?api-version=2024-05-01-preview"
     :stream t
     :key "your-github-token"
     :models '(gpt-4o))
 #+end_src
+
+You will need to create a github [[https://github.com/settings/personal-access-tokens][token]].
 
 For all the available models, check the [[https://github.com/marketplace/models][marketplace]].
 
@@ -734,7 +753,7 @@ The above code makes the backend available to select.  If you want it to be the 
         gptel-backend
         (gptel-make-openai "Github Models" ;Any name you want
           :host "models.inference.ai.azure.com"
-          :endpoint "/chat/completions"
+          :endpoint "/chat/completions?api-version=2024-05-01-preview"
           :stream t
           :key "your-github-token"
           :models '(gpt-4o))
@@ -859,7 +878,7 @@ gptel provides a few powerful, general purpose and flexible commands.  You can d
 2. If a region is selected, the conversation will be limited to its contents.
 
 3. Call =M-x gptel-send= with a prefix argument (~C-u~)
-   - to set chat parameters (GPT model, backend, system message etc) for this buffer,
+   - to set chat parameters (model, backend, system message etc) for this buffer,
    - include quick instructions for the next request only,
    - to add additional context -- regions, buffers or files -- to gptel,
    - to read the prompt from or redirect the response elsewhere,
@@ -967,7 +986,7 @@ Saving the file will save the state of the conversation as well.  To resume the 
 #+html: </details>
 *** Setting options (backend, model, request parameters, system prompts and more)
 
-Most gptel options can be set from gptel's transient menu, available by calling =gptel-send= with a prefix-argument, or via =gptel-menu=.  To change their default values in your configuration, see [[*Additional Configuration]].  Chat buffer-specific options are also available via the header-line in chat buffers.
+Most gptel options can be set from gptel's transient menu, available by calling =gptel-send= with a prefix-argument, or via =gptel-menu=.  To change their default values in your configuration, see [[#additional-configuration][Additional Configuration]].  Chat buffer-specific options are also available via the header-line in chat buffers.
 
 # TODO Remove this when writing the manual.
 Selecting a model and backend can be done interactively via the =-m= command of =gptel-menu=.  Available registered models are prefixed by the name of their backend with a string like =ChatGPT:gpt-4o-mini=, where =ChatGPT= is the backend name you used to register it and =gpt-4o-mini= is the name of the model.
@@ -978,13 +997,97 @@ By default, gptel will query the LLM with the active region or the buffer conten
 
 You can include additional text regions, buffers or files with gptel's queries.  This additional context is "live" and not a snapshot.  Once added, the regions, buffers or files are scanned and included at the time of each query.  When using multi-modal models, added files can be of any supported type -- typically images.
 
-You can add a selected region, buffer or file to gptel's context from the menu, or call =gptel-add=.  (To add a file use =gptel-add= in Dired or use the dedicated =gptel-add-file= command.)
+You can add a selected region, buffer or file to gptel's context from the menu, or call =gptel-add=.  To add a file use =gptel-add= in Dired, or use the dedicated =gptel-add-file= command.  Directories will have their files added recursively after prompting for confirmation.
 
 You can examine the active context from the menu:
 #+html: <img src="https://github.com/karthink/gptel/assets/8607532/63cd7fc8-6b3e-42ae-b6ca-06ff935bae9c" align="center" alt="Image showing gptel's menu with the "inspect context" command.">
 
 And then browse through or remove context from the context buffer:
 #+html: <img src="https://github.com/karthink/gptel/assets/8607532/79a5ffe8-3d63-4bf7-9bf6-0457ab61bf2a" align="center" alt="Image showing gptel's context buffer.">
+
+*** Handle "reasoning" content
+
+Some LLMs include in their response a "thinking" or "reasoning" block.  This text improves the quality of the LLM’s final output, but may not be interesting to you by itself.  You can decide how you would like this "reasoning" content to be handled by gptel by setting the user option =gptel-include-reasoning=.  You can include it in the LLM response (the default), omit it entirely, include it in the buffer but ignore it on subsequent conversation turns, or redirect it to another buffer.  As with most options, you can specify this behvaior from gptel's transient menu globally, buffer-locally or for the next request only.
+
+When included with the response, reasoning content will be delimited by Org blocks or markdown backticks.
+
+*** Tool use (experimental)
+
+gptel can provide the LLM with client-side elisp "tools", or function specifications, along with the request.  If the LLM decides to run the tool, it supplies the tool call arguments, which gptel uses to run the tool in your Emacs session.  The result is optionally returned to the LLM to complete the task.
+
+This exchange can be used to equip the LLM with capabilities or knowledge beyond what is available out of the box -- for instance, you can get the LLM to control your Emacs frame, create or modify files and directories, or look up information relevant to your request via web search or in a local database.  Here is a very simple example:
+
+#+html: <p align="center">
+https://github.com/user-attachments/assets/d1f8e2ac-62bb-49bc-850d-0a67aa0cd4c3
+#+html: </p>
+
+This feature is currently experimental.
+
+To use tools in gptel, you need
+- a model that supports this usage.  All the flagship models support tool use, as do many of the smaller open models.
+- Tool specifications that gptel understands.  gptel does not currently include any tools out of the box.
+
+#+html: <details><summary>
+**** Defining gptel tools
+#+html: </summary>
+
+Defining a gptel tool requires an elisp function and associated metadata.  Here are two simple tool definitions:
+
+*To read the contents of an Emacs buffer*:
+
+#+begin_src emacs-lisp
+(gptel-make-tool
+ :name "read_buffer"                    ; javascript-style snake_case name
+ :function (lambda (buffer)                  ; the function that will run
+             (unless (buffer-live-p (get-buffer buffer))
+               (error "error: buffer %s is not live." buffer))
+             (with-current-buffer  buffer
+               (buffer-substring-no-properties (point-min) (point-max))))
+ :description "return the contents of an emacs buffer"
+ :args (list '(:name "buffer"
+               :type string            ; :type value must be a symbol
+               :description "the name of the buffer whose contents are to be retrieved"))
+ :category "emacs")                     ; An arbitrary label for grouping
+#+end_src
+
+Besides the function itself, which can be named or anonymous (as above), the tool specification requires a =:name=, =:description= and a list of argument specifications in =:args=.  Each argument specification is a plist with atleast the keys =:name=, =:type= and =:description=.
+
+*To create a text file*:
+
+#+begin_src emacs-lisp
+(gptel-make-tool
+ :name "create_file"                    ; javascript-style  snake_case name
+ :function (lambda (path filename content)   ; the function that runs
+             (let ((full-path (expand-file-name filename path)))
+               (with-temp-buffer
+                 (insert content)
+                 (write-file full-path))
+               (format "Created file %s in %s" filename path)))
+ :description "Create a new file with the specified content"
+ :args (list '(:name "path"             ; a list of argument specifications
+	       :type string
+	       :description "The directory where to create the file")
+             '(:name "filename"
+	       :type string
+	       :description "The name of the file to create")
+             '(:name "content"
+	       :type string
+	       :description "The content to write to the file"))
+ :category "filesystem")                ; An arbitrary label for grouping
+#+end_src
+
+With some prompting, you can get an LLM to write these tools for you.
+
+Tools can also be asynchronous, use optional arguments and arguments with more structure (enums, arrays, objects etc).  See =gptel-make-tool= for details.
+
+#+html: </details>
+**** Selecting tools
+
+Once defined, tools can be selected (globally, buffer-locally or for the next request only) from gptel's transient menu:
+
+#+html: <img src="https://github.com/user-attachments/assets/fd878596-b313-4385-b675-3d6546909d8b" align="center" alt="Image showing gptel's tool selection menu.">
+
+From here you can also require confirmation for all tool calls, and decide if tool call results should be included in the LLM response.  See [[#additional-configuration][Additional Configuration]] for doing these things via elisp.
 
 *** Rewrite, refactor or fill in a region
 
@@ -996,7 +1099,7 @@ https://github.com/user-attachments/assets/e3b436b3-9bde-4c1f-b2ce-3f7df1984933
 
 The result is previewed over the original text.  By default, the buffer is not modified.
 
-Pressing =RET= or clicking in the rewritten region should give you a list of options: you can *diff*, *ediff*, *merge* or *accept* the replacement.  Example with code:
+Pressing =RET= or clicking in the rewritten region should give you a list of options: you can *iterate* on, *diff*, *ediff*, *merge* or *accept* the replacement.  Example with code:
 
 #+html: <p align="center">
 https://github.com/user-attachments/assets/4067fdb8-85d3-4264-9b64-d727353f68f9
@@ -1028,22 +1131,23 @@ You can limit the conversation context to an Org heading with the command =gptel
 
 You can have branching conversations in Org mode, where each hierarchical outline path through the document is a separate conversation branch.  This is also useful for limiting the context size of each query.  See the variable =gptel-org-branching-context=.
 
-Note: using this option requires Org 9.6.7 or higher to be available.  The [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]] package uses gptel to provide this branching conversation behavior for older versions of Org.
+If this variable is non-nil, you should probably edit =gptel-prompt-prefix-alist= and =gptel-response-prefix-alist= so that the prefix strings for org-mode are not Org headings, e.g.
+
+#+begin_src emacs-lisp
+  (setf (alist-get 'org-mode gptel-prompt-prefix-alist) "@user\n")
+  (setf (alist-get 'org-mode gptel-response-prefix-alist) "@assistant\n")
+#+end_src
+
+Otherwise, the default prompt prefix will make successive prompts sibling headings, and therefore on different conversation branches, which probably isn't what you want.
+
+Note: using this option requires Org 9.7 or higher to be available.  The [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]] package uses gptel to provide this branching conversation behavior for older versions of Org.
   
 ***** Save gptel parameters to Org headings (reproducible chats)
 
 You can declare the gptel model, backend, temperature, system message and other parameters as Org properties with the command =gptel-org-set-properties=.  gptel queries under the corresponding heading will always use these settings, allowing you to create mostly reproducible LLM chat notebooks, and to have simultaneous chats with different models, model settings and directives under different Org headings.
 
 ** FAQ
-#+html: <details><summary>
-**** I want to use gptel in a way that's not supported by =gptel-send= or the options menu
-#+html: </summary>
-
-gptel's default usage pattern is simple, and will stay this way: Read input in any buffer and insert the response below it.  Some custom behavior is possible with the transient menu (=C-u M-x gptel-send=).
-
-For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]] for examples.
-
-#+html: </details>
+*** Chat buffer UI
 #+html: <details><summary>
 **** I want the window to scroll automatically as the response is inserted
 #+html: </summary>
@@ -1067,7 +1171,6 @@ To be minimally annoying, gptel does not move the cursor by default.  Add the fo
 
 You can also call =gptel-end-of-response= as a command at any time.
 
-
 #+html: </details>
 #+html: <details><summary>
 **** I want to change the formatting of the prompt and LLM response
@@ -1078,6 +1181,18 @@ For dedicated chat buffers: customize =gptel-prompt-prefix-alist= and =gptel-res
 Anywhere in Emacs: Use =gptel-pre-response-hook= and =gptel-post-response-functions=, which see.
 
 #+html: </details>
+#+html: <details><summary>
+**** How does gptel distinguish between user prompts and LLM responses?
+#+html: </summary>
+
+gptel uses [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Text-Properties.html][text-properties]] to watermark LLM responses.  Thus this text is interpreted as a response even if you copy it into another buffer.  In regular buffers (buffers without =gptel-mode= enabled), you can turn off this tracking by unsetting =gptel-track-response=.
+
+When restoring a chat state from a file on disk, gptel will apply these properties from saved metadata in the file when you turn on =gptel-mode=.
+
+gptel does /not/ use any prefix or semantic/syntax element in the buffer (such as headings) to separate prompts and responses.  The reason for this is that gptel aims to integrate as seamlessly as possible into your regular Emacs usage: LLM interaction is not the objective, it's just another tool at your disposal.  So requiring a bunch of "user" and "assistant" tags in the buffer is noisy and restrictive. If you want these demarcations, you can customize =gptel-prompt-prefix-alist= and =gptel-response-prefix-alist=.  Note that these prefixes are for your readability only and purely cosmetic.
+
+#+html: </details>
+*** Transient menu behavior
 #+html: <details><summary>
 **** I want the transient menu options to be saved so I only need to set them once
 #+html: </summary>
@@ -1103,21 +1218,24 @@ Or see this [[https://github.com/karthink/gptel/wiki/Commonly-requested-features
 
 #+html: </details>
 #+html: <details><summary>
+**** Using the transient menu leaves behind extra windows
+#+html: </summary>
+
+If using gptel's transient menus causes new/extra window splits to be created, check your value of =transient-display-buffer-action=.  [[https://github.com/magit/transient/discussions/358][See this discussion]] for more context.
+
+If you are using Helm, see [[https://github.com/magit/transient/discussions/361][Transient#361]].
+
+In general, do not customize this Transient option unless you know what you're doing!
+
+#+html: </details>
+#+html: <details><summary>
 **** Can I change the transient menu key bindings?
+#+html: </summary>
 
 Yes, see =transient-suffix-put=.  This changes the key to select a backend/model from "-m" to "M" in gptel's menu:
 #+begin_src emacs-lisp
 (transient-suffix-put 'gptel-menu (kbd "-m") :key "M")
 #+end_src
-
-**** How does gptel distinguish between user prompts and LLM responses?
-#+html: </summary>
-
-gptel uses [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Text-Properties.html][text-properties]] to watermark LLM responses.  Thus this text is interpreted as a response even if you copy it into another buffer.  In regular buffers (buffers without =gptel-mode= enabled), you can turn off this tracking by unsetting =gptel-track-responses=.
-
-When restoring a chat state from a file on disk, gptel will apply these properties from saved metadata in the file when you turn on =gptel-mode=.
-
-gptel does /not/ use any prefix or semantic/syntax element in the buffer (such as headings) to separate prompts and responses.  The reason for this is that gptel aims to integrate as seamlessly as possible into your regular Emacs usage: LLM interaction is not the objective, it's just another tool at your disposal.  So requiring a bunch of "user" and "assistant" tags in the buffer is noisy and restrictive. If you want these demarcations, you can customize =gptel-prompt-prefix-alist= and =gptel-response-prefix-alist=.  Note that these prefixes are for your readability only and purely cosmetic.
 
 #+html: </details>
 #+html: <details><summary>
@@ -1132,6 +1250,16 @@ Two solutions:
   #+begin_src emacs-lisp
   (transient-suffix-put 'gptel-menu (kbd "RET") :key "<f8>")
   #+end_src
+
+#+html: </details>
+*** Miscellaneous
+#+html: <details><summary>
+**** I want to use gptel in a way that's not supported by =gptel-send= or the options menu
+#+html: </summary>
+
+gptel's default usage pattern is simple, and will stay this way: Read input in any buffer and insert the response below it.  Some custom behavior is possible with the transient menu (=C-u M-x gptel-send=).
+
+For more programmable usage, gptel provides a general =gptel-request= function that accepts a custom prompt and a callback to act on the response. You can use this to build custom workflows not supported by =gptel-send=.  See the documentation of =gptel-request=, and the [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]] for examples.
 
 #+html: </details>
 #+html: <details><summary>
@@ -1155,7 +1283,7 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 2. Integration with org-mode, not using a walled-off org-babel block, but as regular text.  This way the model can generate code blocks that I can run.
 
 #+html: </details>
-#+html: <details><summary>
+
 ** Additional Configuration
 :PROPERTIES:
 :ID:       f885adac-58a3-4eba-a6b7-91e9e7a17829
@@ -1188,36 +1316,45 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 | =gptel-directives=    | Alist of system directives, can switch on the fly.      |
 | =gptel-max-tokens=    | Maximum token count (in query + response).              |
 | =gptel-temperature=   | Randomness in response text, 0 to 2.                    |
+| =gptel-cache=         | Cache prompts, system message or tools (Anthropic only) |
 | =gptel-use-context=   | How/whether to include additional context               |
+| =gptel-use-tools=     | Disable, allow or force LLM tool-use                    |
+| =gptel-tools=         | List of tools to include with requests                  |
 |-----------------------+---------------------------------------------------------|
 
-|--------------------------------+----------------------------------------------------------------|
-| *Chat UI options*              |                                                                |
-|--------------------------------+----------------------------------------------------------------|
-| =gptel-default-mode=           | Major mode for dedicated chat buffers.                         |
-| =gptel-track-response=         | Distinguish between user messages and LLM responses?           |
-| =gptel-track-media=            | Send images or other media from links?                         |
-| =gptel-prompt-prefix-alist=    | Text inserted before queries.                                  |
-| =gptel-response-prefix-alist=  | Text inserted before responses.                                |
-| =gptel-use-header-line=        | Display status messages in header-line (default) or minibuffer |
-| =gptel-display-buffer-action=  | Placement of the gptel chat buffer.                            |
-|--------------------------------+----------------------------------------------------------------|
+|-------------------------------+----------------------------------------------------------------|
+| *Chat UI options*             |                                                                |
+|-------------------------------+----------------------------------------------------------------|
+| =gptel-default-mode=          | Major mode for dedicated chat buffers.                         |
+| =gptel-prompt-prefix-alist=   | Text inserted before queries.                                  |
+| =gptel-response-prefix-alist= | Text inserted before responses.                                |
+| =gptel-track-response=        | Distinguish between user messages and LLM responses?           |
+| =gptel-track-media=           | Send images or other media from links?                         |
+| =gptel-confirm-tool-calls=    | Confirm all tool calls?                                        |
+| =gptel-include-tool-results=  | Include tool results in the LLM response?                      |
+| =gptel-use-header-line=       | Display status messages in header-line (default) or minibuffer |
+| =gptel-display-buffer-action= | Placement of the gptel chat buffer.                            |
+|-------------------------------+----------------------------------------------------------------|
 
 |-------------------------------+-------------------------------------------------------|
 | *Org mode UI options*         |                                                       |
 |-------------------------------+-------------------------------------------------------|
 | =gptel-org-branching-context= | Make each outline path a separate conversation branch |
+| =gptel-org-ignore-elements=   | Ignore parts of the buffer when sending a query       |
 |-------------------------------+-------------------------------------------------------|
 
 |---------------------------------+-------------------------------------------------------------|
 | *Hooks for customization*       |                                                             |
 |---------------------------------+-------------------------------------------------------------|
 | =gptel-save-state-hook=         | Runs before saving the chat state to a file on disk         |
+| =gptel-prompt-filter-hook=      | Runs in a temp buffer to transform text before sending      |
+| =gptel-post-request-hook=       | Runs immediately after dispatching a =gptel-request=.       |
 | =gptel-pre-response-hook=       | Runs before inserting the LLM response into the buffer      |
 | =gptel-post-response-functions= | Runs after inserting the full LLM response into the buffer  |
 | =gptel-post-stream-hook=        | Runs after each streaming insertion                         |
 | =gptel-context-wrap-function=   | To include additional context formatted your way            |
 | =gptel-rewrite-default-action=  | Automatically diff, ediff, merge or replace refactored text |
+| =gptel-post-rewrite-functions=  | Runs after a =gptel-rewrite= request succeeds               |
 |---------------------------------+-------------------------------------------------------------|
 
 #+html: </details>
@@ -1225,21 +1362,21 @@ Other Emacs clients for LLMs prescribe the format of the interaction (a comint s
 ** COMMENT Will you add feature X?
 
 Maybe, I'd like to experiment a bit more first.  Features added since the inception of this package include
-- Curl support (=gptel-use-curl=)
-- Streaming responses (=gptel-stream=)
+- Curl support (=gptel-use-curl=).
+- Streaming responses (=gptel-stream=).
 - Cancelling requests in progress (=gptel-abort=)
 - General API for writing your own commands (=gptel-request=, [[https://github.com/karthink/gptel/wiki/Defining-custom-gptel-commands][wiki]])
-- Dispatch menus using Transient (=gptel-send= with a prefix arg)
-- Specifying the conversation context size
-- GPT-4 support
-- Response redirection (to the echo area, another buffer, etc)
-- A built-in refactor/rewrite prompt
-- Limiting conversation context to Org headings using properties (#58)
-- Saving and restoring chats (#17)
+- Dispatch menus using Transient (=gptel-send= with a prefix arg).
+- Specifying the conversation context size.
+- GPT-4 support.
+- Response redirection (to the echo area, another buffer, etc).
+- A built-in refactor/rewrite prompt.
+- Limiting conversation context to Org headings using properties (#58).
+- Saving and restoring chats (#17).
 - Support for local LLMs.
 
 Features being considered or in the pipeline:
-- Fully stateless design (#17)
+- Fully stateless design ([[https://github.com/karthink/gptel/discussions/119][discussion #119]]).
 
 ** Alternatives
 
@@ -1257,13 +1394,12 @@ There are several more: [[https://github.com/MichaelBurge/leafy-mode][leafy-mode
 gptel is a general-purpose package for chat and ad-hoc LLM interaction.  The following packages use gptel to provide additional or specialized functionality:
 
 - [[https://github.com/karthink/gptel-quick][gptel-quick]]: Quickly look up the region or text at point.
-- [[https://github.com/daedsidog/evedel][Evedel]]: Instructed LLM Programmer/Assistant
-- [[https://github.com/lanceberge/elysium][Elysium]]: Automatically apply AI-generated changes as you code
-- [[https://github.com/kamushadenes/gptel-extensions.el][gptel-extensions]]: Extra utility functions for gptel
-- [[https://github.com/kamushadenes/ai-blog.el][ai-blog.el]]: Streamline generation of blog posts in Hugo
-- [[https://github.com/douo/magit-gptcommit][magit-gptcommit]]: Generate Commit Messages within magit-status Buffer using gptel
+- [[https://github.com/daedsidog/evedel][Evedel]]: Instructed LLM Programmer/Assistant.
+- [[https://github.com/lanceberge/elysium][Elysium]]: Automatically apply AI-generated changes as you code.
+- [[https://github.com/kamushadenes/ai-blog.el][ai-blog.el]]: Streamline generation of blog posts in Hugo.
+- [[https://github.com/douo/magit-gptcommit][magit-gptcommit]]: Generate Commit Messages within magit-status Buffer using gptel.
 - [[https://github.com/armindarvish/consult-omni][consult-omni]]: Versatile multi-source search package.  It includes gptel as one of its many sources.
-- [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]]: Provides branching conversations in Org buffers using gptel.  (Note that gptel includes this feature as well (see =gptel-org-branching-context=), but requires a recent version of Org mode (9.67 or later) to be installed.)
+- [[https://github.com/ultronozm/ai-org-chat.el][ai-org-chat]]: Provides branching conversations in Org buffers using gptel.  (Note that gptel includes this feature as well (see =gptel-org-branching-context=), but requires a recent version of Org mode 9.7 or later to be installed.)
 - [[https://github.com/rob137/Corsair][Corsair]]: Helps gather text to populate LLM prompts for gptel.
 
 ** COMMENT Older Breaking Changes
@@ -1278,6 +1414,9 @@ gptel is a general-purpose package for chat and ad-hoc LLM interaction.  The fol
 
 ** Acknowledgments
 
+- [[https://github.com/pabl0][Henrik Ahlgren]] for a keen eye to detail and polish applied to gptel's UI.
+- [[https://github.com/positron-solutions/][Positron Solutions]] for extensive testing of the tool use feature and the design of gptel's in-buffer tool use records.
+- [[https://github.com/jdtsmith][JD Smith]] for feedback and code assistance with gptel-menu's redesign
 - [[https://github.com/meain][Abin Simon]] for extensive feedback on improving gptel's directives and UI.
 - [[https://github.com/algal][Alexis Gallagher]] and [[https://github.com/d1egoaz][Diego Alvarez]] for fixing a nasty multi-byte bug with =url-retrieve=.
 - [[https://github.com/tarsius][Jonas Bernoulli]] for the Transient library.
